<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alauddin.imageoftheday.MainActivity" >
    
    <TextView
        android:id="@+id/textSetting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/auto_download_text" />
    
    <CheckBox
        android:id="@+id/autoDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/load_btn"
        android:layout_alignRight="@+id/load_btn"
        android:layout_alignTop="@+id/textSetting1" />
    
    <Button
        android:id="@+id/load_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/load_image"
        android:layout_below="@+id/textSetting1" />
    
    <Button
        android:id="@+id/save_sdcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/save_sdcard"
        android:layout_below="@+id/load_btn" />
    
    <Button
        android:id="@+id/set_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/set_wallpaper"
        android:layout_below="@+id/load_btn"
        android:layout_toRightOf="@+id/save_sdcard"
        android:layout_toEndOf="@+id/save_sdcard" />
    
    <TextView
        android:id="@+id/text_output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff0000"
        android:layout_below="@+id/save_sdcard" />
    
    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/text_output" />

</RelativeLayout>
